--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Time to tweet</h1>
+
+<%= form_tag (home_index_path) do %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    
+  <p> <%= label_tag 'content', "Que souhaitez vous twitter ?"  %> </p>
+  <p> <%= text_field_tag(:tweet) %> </p>
+
+<p> <%= submit_tag 'Je tweet !', class: "btn btn-primary"%></p>
+
+  </div>
+</div>
+<% end %>
